feat: показывать баны героев на странице завершённого матча (#28)
