# src/lib/api/types.ts
@@ -177,6 +177,7 @@ export type MatchLiveSnapshotDto = S['MatchLiveSnapshotDto'];
 export type TeamLiveDto = S['TeamLiveDto'];
 export type PlayerLiveDto = S['PlayerLiveDto'];
 export type MatchResultDto = S['MatchResultDto'];
+export type MatchBanDto = S['MatchBanDto'];
 export type MatchPlayerStatDto = S['MatchPlayerStatDto'];
 export type PlayerMatchSummaryDto = S['PlayerMatchSummaryDto'];
 export type PlayerStatsDto = S['PlayerStatsDto'];
